--- a/index.html
+++ b/index.html
@@ -138,32 +138,53 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 
     </ul>
+
     <div class="iphone">
-        <div class="iphone_tile">
+      <div class="iphone_tile back">
+        <img src="images/preload.jpg" class="tile__icon"/><p>
+        <a href="https://www.youtube.com/watch?v=vp9cBSHzhAY" target="_blank">YouTube</a> |
+        <a href="https://vimeo.com/168689172" target="_blank">Vimeo</a>
+      </div>
+        <div class="iphone_tile front">
           <img src="images/city.jpg" class="tile__icon"/>
           <h1>Spring 2016</h1>
-          <a href="https://www.youtube.com/watch?v=vp9cBSHzhAY" target="_blank">YouTube</a> |
-          <a href="https://vimeo.com/168689172" target="_blank">Vimeo</a>
         </div>
 
-        <div class="iphone_tile">
+      </div>
+
+<div class="iphone">
+  <div class="iphone_tile back">
+    <img src="images/preload.jpg" class="tile__icon"/><p>
+          <a href="https://vimeo.com/158559241" target="_blank">Vimeo</a></p>
+  </div>
+        <div class="iphone_tile front">
           <img src="images/snow.jpg" class="tile__icon"/>
           <h1>Winter 2015/2016</h1>
-          <a href="https://vimeo.com/158559241" target="_blank">Vimeo</a>
         </div>
+      </div>
 
-        <div class="iphone_tile">
+<div class="iphone">
+  <div class="iphone_tile back">
+    <img src="images/preload.jpg" class="tile__icon"/><p>
+      <a href="https://www.youtube.com/watch?v=U1ccDWCdDPI" target="_blank">YouTube</a> |
+      <a href="https://vimeo.com/146792260" target="_blank">Vimeo</a></p>
+  </div>
+        <div class="iphone_tile front">
           <img src="images/mntn.jpg" class="tile__icon"/>
           <h1>Fall 2015</h1>
-          <a href="https://www.youtube.com/watch?v=U1ccDWCdDPI" target="_blank">YouTube</a> |
-          <a href="https://vimeo.com/146792260" target="_blank">Vimeo</a>
-        </div>
 
-        <div class="iphone_tile">
+        </div>
+</div>
+
+<div class="iphone">
+  <div class="iphone_tile back">
+    <img src="images/preload.jpg" class="tile__icon"/><p>
+      <a href="https://www.youtube.com/watch?v=mSPgGNASlHY" target="_blank">YouTube</a> |
+      <a href="https://vimeo.com/139016594" target="_blank">Vimeo</a></p>
+  </div>
+        <div class="iphone_tile front">
           <img src="images/fountain.jpg" class="tile__icon"/>
           <h1>Summer 2015</h1>
-          <a href="https://www.youtube.com/watch?v=mSPgGNASlHY" target="_blank">YouTube</a> |
-          <a href="https://vimeo.com/139016594" target="_blank">Vimeo</a>
         </div>
     </div>
 
